# pcb2gcode

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  autoleveller.cpp  board.cpp  board.hpp  configure.ac  drill.cpp  eulerian_paths.cpp  gerberimporter.cpp  gerberimporter.hpp  integration_tests.py  layer.cpp  layer.hpp  main.cpp  merge_near_points.cpp  ngc_exporter.cpp  ngc_exporter.hpp  options.cpp  options.hpp  path_finding.cpp  path_finding.hpp  surface_vectorial.cpp  surface_vectorial.hpp  tsp_solver.hpp
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yaml
cmake/: CodeCoverage.cmake
src/: autoleveller.cpp  autoleveller.hpp  board.cpp  config.h.cmake.in  consistent_rand.cpp  consistent_rand.hpp  drill.cpp  drill.hpp  eulerian_paths.cpp  eulerian_paths.hpp  gerberimporter.cpp  gerberimporter.hpp  layer.cpp  main.cpp  ngc_exporter.hpp  options.cpp  outline_bridges.cpp  pcb2gcode_version.hpp  pcb2gcode_version_generated.hpp.in  surface_vectorial.cpp  svg_writer.cpp
testing/broken_examples/split_config/expected/: back.ngc
testing/gerbv_example/D1MiniGSR/expected/: back.ngc  drill.ngc  front.ngc  outline.ngc
testing/gerbv_example/Easy-SDR_HF_Upconverter_SMD_Gerbers/expected/: back.ngc  drill.ngc  front.ngc  outline.ngc
testing/gerbv_example/KNoT-Gateway Mini Starter Board/expected/: back.ngc  front.ngc
testing/gerbv_example/KNoT_Thing_Starter_Board/expected/: back.ngc
testing/gerbv_example/KeyboardControllerM102/expected/: KeyboardControllerM102Silkscreen_back.ngc  KeyboardControllerM102Silkscreen_front.ngc
testing/gerbv_example/Rotary-Encoder-Breakout/expected/: back.ngc
testing/gerbv_example/am-test-counterclockwise/expected/: back.ngc
testing/gerbv_example/am-test-extended/expected/: back.ngc
testing/gerbv_example/am-test-millinfeed/expected/: back.ngc
testing/gerbv_example/am-test-voronoi-extra-passes/expected/: back.ngc
testing/gerbv_example/am-test-voronoi-front/expected/: front.ngc
testing/gerbv_example/am-test-voronoi-wide-extra-passes/expected/: back.ngc
testing/gerbv_example/am-test-voronoi/expected/: back.ngc
testing/gerbv_example/am-test/expected/: back.ngc
testing/gerbv_example/backtrack/expected/: test-Edge.Cuts-front-1.2mm.nc  test-F.Cu-front-0.3mm.nc
testing/gerbv_example/backtrack_0/expected/: test-F.Cu-front-0.3mm.nc
testing/gerbv_example/edge-cuts-broken-loop/expected/: outline.ngc
testing/gerbv_example/edge-cuts-inside-cuts/expected/: outline.ngc
testing/gerbv_example/example_board_al_custom/expected/: back.ngc  front.ngc
testing/gerbv_example/example_board_al_custom_tiled/expected/: back.ngc  front.ngc  outline.ngc
testing/gerbv_example/example_board_al_linuxcnc/expected/: back.ngc  front.ngc  outline.ngc
testing/gerbv_example/example_board_al_linuxcnc_tiled/expected/: back.ngc  front.ngc  outline.ngc
testing/gerbv_example/example_board_al_mach3/expected/: back.ngc  front.ngc
testing/gerbv_example/example_board_al_mach3_tiled/expected/: back.ngc  front.ngc  outline.ngc
testing/gerbv_example/example_board_al_mach4/expected/: back.ngc  front.ngc
testing/gerbv_example/example_board_al_mach4_tiled/expected/: back.ngc  front.ngc  outline.ngc
testing/gerbv_example/example_board_new_default/expected/: back.ngc  front.ngc
testing/gerbv_example/example_board_new_mirror_x/expected/: back.ngc  drill.ngc
testing/gerbv_example/example_board_new_mirror_y/expected/: back.ngc
testing/gerbv_example/example_board_new_mirror_y_drill_back/expected/: drill.ngc  front.ngc  outline.ngc
testing/gerbv_example/example_board_new_zero_start/expected/: back.ngc  drill.ngc  front.ngc  outline.ngc
testing/gerbv_example/invert_gerbers/expected/: front.ngc
testing/gerbv_example/invert_gerbers_fill/expected/: front.ngc  outline.ngc
testing/gerbv_example/lift-mill/expected/: front.ngc  outline.ngc
testing/gerbv_example/mill_masking/expected/: front.ngc  outline.ngc
testing/gerbv_example/mill_masking_voronoi/expected/: front.ngc
testing/gerbv_example/milldrilldiatest/expected/: drill.ngc  milldrill.ngc
testing/gerbv_example/milldrilldiatest_units/expected/: drill.ngc  milldrill.ngc
testing/gerbv_example/multi_outline/expected/: outline.ngc
testing/gerbv_example/multivibrator-basename/expected/: testbase_name_back.ngc  testbase_name_milldrill.ngc  testbase_name_outline.ngc
testing/gerbv_example/multivibrator-clockwise/expected/: back.ngc  front.ngc  milldrill.ngc  outline.ngc
testing/gerbv_example/multivibrator-contentions/expected/: back.ngc
testing/gerbv_example/multivibrator-extra-passes-big/expected/: back.ngc
testing/gerbv_example/multivibrator-extra-passes-two-isolators-tiles-al/expected/: back.ngc  milldrill.ngc  outline.ngc
testing/gerbv_example/multivibrator-extra-passes-two-isolators-tiles/expected/: back.ngc  milldrill.ngc  outline.ngc
testing/gerbv_example/multivibrator-extra-passes-two-isolators/expected/: back.ngc  milldrill.ngc  outline.ngc
testing/gerbv_example/multivibrator-extra-passes-voronoi/expected/: back.ngc  outline.ngc
testing/gerbv_example/multivibrator-extra-passes/expected/: back.ngc  milldrill.ngc  outline.ngc
testing/gerbv_example/multivibrator-identical-isolators/expected/: back.ngc
testing/gerbv_example/multivibrator-no-tsp-2opt/expected/: back.ngc  milldrill.ngc  outline.ngc
testing/gerbv_example/multivibrator-no-zbridges/expected/: back.ngc  milldrill.ngc  outline.ngc
testing/gerbv_example/multivibrator-two-isolators/expected/: back.ngc
testing/gerbv_example/multivibrator-zchange-absolute/expected/: back.ngc  milldrill.ngc  outline.ngc
testing/gerbv_example/multivibrator/expected/: back.ngc  milldrill.ngc
testing/gerbv_example/multivibrator_milldrill_nom6/expected/: back.ngc  milldrill.ngc  outline.ngc
testing/gerbv_example/multivibrator_no_optimise/expected/: back.ngc  (+1 more)
tests/: eulerian_paths_tests.cpp  gerberimporter_tests.cpp  voronoi_tests.cpp
tests/data/gerberimporter/: NanoV3.3-B_Cu.gbr
tests/integration/: integration_tests.py  run_example.py
tools/: fix_up_expected.py  integration_tests.py  parallel.py
(+202 files in other folders)
